12355 vnic_unicast_add() can return uninitialised diag value Reviewed by: Robert Mustacchi <rm@fingolfin.org> Reviewed by: Dominik Hassler <hadfl@omniosce.org> Approved by: Joshua M. Clulow <josh@sysmgr.org>