usr/src/uts/common/io/vnic/vnic_dev.c
@@ -22,6 +22,7 @@
  * Copyright (c) 2010, Oracle and/or its affiliates. All rights reserved.
  * Copyright 2018 Joyent, Inc.
  * Copyright 2016 OmniTI Computer Consulting, Inc. All rights reserved.
+ * Copyright 2020 OmniOS Community Edition (OmniOSce) Association.
  */
 
 #include <sys/types.h>
@@ -198,7 +199,7 @@ vnic_unicast_add(vnic_t *vnic, vnic_mac_addr_type_t vnic_addr_type,
     uint8_t *mac_addr_arg, uint16_t flags, vnic_ioc_diag_t *diag,
     uint16_t vid, boolean_t req_hwgrp_flag)
 {
-	mac_diag_t mac_diag;
+	mac_diag_t mac_diag = MAC_DIAG_NONE;
 	uint16_t mac_flags = 0;
 	int err;
 	uint_t addr_len;
